src/objects/SomTv_AdfProjekt__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdF Projekte</relationshipLabel>
        <relationshipName>AdF_Projekte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFConceptAdSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Umbenannt zum 01.03.15 von &quot;Verkäufer AdF Special Ad Sales&quot; zu &quot;Verkäufer AdF Concept Sales&quot;</description>
        <label>Verkäufer AdF Concept Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SomTv_AdFConceptAdSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFConceptioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdF Conceptioner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdF_Projekte1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFLicensingSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verkäufer AdF Licensing Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdF_Projekte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AdFProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdF Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SomTv_AdFProjectManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_AgencyServiceTeam__c</fullName>
        <description>Auswahl des zugehörigen Agency Service Teams.</description>
        <inlineHelpText>Auswahl des zugehörigen Agency Service Teams.</inlineHelpText>
        <label>Agency Service Team</label>
        <picklist>
            <picklistValues>
                <fullName>Aegis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kundenabhängig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magna Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Omnicom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivaki</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_BRDigital__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1Digital_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1Digital_c</inlineHelpText>
        <label>BR (%) Digital</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRGesamt__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Gesamt_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Gesamt_c</inlineHelpText>
        <label>BR (%) gesamt</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRLizenz__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Lizenz_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Lizenz_c</inlineHelpText>
        <label>BR (%) Lizenzen</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRPlacements__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Placments_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Placments_c</inlineHelpText>
        <label>BR (%) Placements</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRRabattierfaehig__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Rabattierfaehig_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Rabattierfaehig_c</inlineHelpText>
        <label>BR (%) rabattierfähig</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRTestimonial__c</fullName>
        <label>BR (%) Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_BRTvfrei__c</fullName>
        <description>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Tvfrei_c</description>
        <inlineHelpText>Gewichtetes Mittel Barrabatt in %
(Summe (OLI.SomTv_MB1_Kopf_AdF_c*OLI.BRc))/SomTv_MB1_Tvfrei_c</inlineHelpText>
        <label>BR (%) freigabepflichtig</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_DigitalSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verkäufer SOM Digital Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SomTv_DigitalSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Digital__c</fullName>
        <description>Zwischensumme Mediabrutto1 der Digital-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 der Digital-Produkte</inlineHelpText>
        <label>MB1 Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Gesamt__c</fullName>
        <description>Zwischensumme Mediabrutto1 aller Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 aller Produkte</inlineHelpText>
        <label>MB1 gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Lizenz__c</fullName>
        <description>Zwischensumme Mediabrutto1 der Lizenz-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 der Lizenz-Produkte</inlineHelpText>
        <label>MB1 Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Placements__c</fullName>
        <description>Zwischensumme Mediabrutto1 der Placement-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 der Placement-Produkte</inlineHelpText>
        <label>MB1 Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Rabattierfaehig__c</fullName>
        <description>Zwischensumme Mediabrutto1 der rabattierfähigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>MB1 rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Testimonial__c</fullName>
        <label>MB1 Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB1Tvfrei__c</fullName>
        <description>Zwischensumme Mediabrutto1 der freigabepflichtigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto1 der freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>MB1 freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Digital__c</fullName>
        <description>Zwischensumme Mediabrutto3 der Digital-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto3 der Digital-Produkte</inlineHelpText>
        <label>MB3 Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Gesamt__c</fullName>
        <description>Summe Mediabrutto3 aller Produkte</description>
        <inlineHelpText>Summe Mediabrutto3 aller Produkte</inlineHelpText>
        <label>MB3 gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Lizenz__c</fullName>
        <description>Zwischensumme Mediabrutto3 der Lizenz-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto3 der Lizenz-Produkte</inlineHelpText>
        <label>MB3 Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Placements__c</fullName>
        <description>Zwischensumme Mediabrutto3  der Placement-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto3 der Placement-Produkte</inlineHelpText>
        <label>MB3 Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Rabattierfaehig__c</fullName>
        <description>Zwischensumme Mediabrutto 3 der rabattierfähigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto 3 der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>MB3 rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Testimonial__c</fullName>
        <label>MB3 Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MB3Tvfrei__c</fullName>
        <description>Zwischensumme Mediabrutto3 der freigabepflichtigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Mediabrutto3 der freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>MB3 freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Digital__c</fullName>
        <description>Zwischensumme Medianetto1 der Digital-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der Digital-Produkte</inlineHelpText>
        <label>MN1 Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Gesamt__c</fullName>
        <description>Summe Medianetto1 aller Produkte</description>
        <inlineHelpText>Summe Medianetto1 aller Produkte</inlineHelpText>
        <label>MN1 gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Lizenz__c</fullName>
        <description>Zwischensumme Medianetto1 der Lizenz-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der Lizenz-Produkte</inlineHelpText>
        <label>MN1 Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Placements__c</fullName>
        <description>Zwischensumme Medianetto1 der Placement-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der Placement-Produkte</inlineHelpText>
        <label>MN1 Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Rabattierfaehig__c</fullName>
        <description>Zwischensumme Medianetto1 der rabattierfähigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>MN1 rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Testimonial__c</fullName>
        <label>MN1 Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN1Tvfrei__c</fullName>
        <description>Zwischensumme Medianetto1 der freigabepflichtigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>MN1 freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Digital__c</fullName>
        <description>Zwischensumme Medianetto2 der Digital-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto2 der Digital-Produkte</inlineHelpText>
        <label>MN2 Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Gesamt__c</fullName>
        <description>Summe Medianetto2 aller Produkte</description>
        <inlineHelpText>Summe Medianetto2 aller Produkte</inlineHelpText>
        <label>MN2 gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Lizenz__c</fullName>
        <description>Zwischensumme Medianetto2 der Lizenz-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto2 der Lizenz-Produkte</inlineHelpText>
        <label>MN2  Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Placements__c</fullName>
        <description>Zwischensumme Medianetto2 der Placement-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto2 der Placement-Produkte</inlineHelpText>
        <label>MN2 Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Rabattierfaehig__c</fullName>
        <description>Zwischensumme Medianetto1 der rabattierfähigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto1 der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>MN2 rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Testimonial__c</fullName>
        <label>MN2 Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN2Tvfrei__c</fullName>
        <description>Zwischensumme Medianetto2 der freigabepflichtigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto2 der freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>MN2 freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Digital__c</fullName>
        <description>Zwischensumme Medianetto3 der Digital-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto3 der Digital-Produkte</inlineHelpText>
        <label>MN3 Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Gesamt__c</fullName>
        <description>Summe Medianetto3 aller Produkte</description>
        <inlineHelpText>Summe Medianetto3 aller Produkte</inlineHelpText>
        <label>MN3 gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Lizenz__c</fullName>
        <description>Zwischensumme Medianetto3 der Lizenz-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto3 der Lizenz-Produkte</inlineHelpText>
        <label>MN3 Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Placements__c</fullName>
        <description>Zwischensumme Medianetto3 der Placement-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto3 der Placement-Produkte</inlineHelpText>
        <label>MN3 Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Rabattierfaehig__c</fullName>
        <description>Zwischensumme Medianetto3 der rabattierfähigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto3 der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>MN3 rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Testimonial__c</fullName>
        <label>MN3 Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_MN3Tvfrei__c</fullName>
        <description>Zwischensumme Medianetto3 der freigabepflichtigen TV-Produkte</description>
        <inlineHelpText>Zwischensumme Medianetto3 der freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>MN3 freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomTv_PfadZumKundenordner__c</fullName>
        <description>Hier kann der Link zum S-Laufwerk eingetragen werden damit dieser dann im AdF Projekt klickbar angezeigt wird.</description>
        <inlineHelpText>Hier kann der Link zum S-Laufwerk eingetragen werden damit dieser dann im AdF Projekt klickbar angezeigt wird.</inlineHelpText>
        <label>Pfad zum Kundenordner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_PhaseProjekt__c</fullName>
        <description>Beschreibt den Status der Rabattfreigabe von AdF-Projekten und Bausteinen. Phase des Projektes muss auf &quot;in Anlage&quot; stehen, um &quot;Für Genehmigung einzureichen&quot; zu aktivieren.</description>
        <inlineHelpText>Beschreibt den Status der Rabattfreigabe von AdF-Projekten und Bausteinen. Phase des Projektes muss auf &quot;in Anlage&quot; stehen, um &quot;Für Genehmigung einzureichen&quot; zu aktivieren.</inlineHelpText>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>angelegt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>in Briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabatt freigegeben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabatt abgelehnt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_SomTvSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verkäufer SOM-TV Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SomTv_SomTvSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldDigital__c</fullName>
        <formula>IF (SomTv_MB3Digital__c=0, 0, SomTv_MN3Digital__c/SomTv_MB3Digital__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield (%) Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldGesamt__c</fullName>
        <description>Yield aller Produkte innerhalb des AdF-Projektes</description>
        <formula>IF (SomTv_MB3Gesamt__c=0, 0,SomTv_MN3Gesamt__c/SomTv_MB3Gesamt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield aller Produkte innerhalb des AdF-Projektes</inlineHelpText>
        <label>Yield (%) gesamt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldLizenz__c</fullName>
        <description>Yield der Lizenz-Produkte</description>
        <formula>IF (SomTv_MB3Lizenz__c=0, 0, SomTv_MN3Lizenz__c/SomTv_MB3Lizenz__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield der Lizenz-Produkte</inlineHelpText>
        <label>Yield (%) Lizenzen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldPlacements__c</fullName>
        <description>Yield der Placement-Produkte</description>
        <formula>IF (SomTv_MB3Placements__c=0, 0, SomTv_MN3Placements__c/SomTv_MB3Placements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield der Placement-Produkte</inlineHelpText>
        <label>Yield (%) Placements</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldRabattierfaehig__c</fullName>
        <description>Yield der rabattierfähigen TV-Produkte</description>
        <formula>IF (SomTv_MB3Rabattierfaehig__c=0, 0, SomTv_MN3Rabattierfaehig__c/SomTv_MB3Rabattierfaehig__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield der rabattierfähigen TV-Produkte</inlineHelpText>
        <label>Yield (%) rabattierfähig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldTestimonial__c</fullName>
        <formula>IF ( SomTv_MB3Testimonial__c=0, 0,  SomTv_MN3Testimonial__c /SomTv_MB3Testimonial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield (%) Testimonial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomTv_YieldTvfrei__c</fullName>
        <description>Yield aller freigabepflichtigen TV-Produkte</description>
        <formula>IF (SomTv_MB3Tvfrei__c=0, 0, SomTv_MN3Tvfrei__c/SomTv_MB3Tvfrei__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yield aller freigabepflichtigen TV-Produkte</inlineHelpText>
        <label>Yield (%) freigabepflichtig</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tftemp__c</fullName>
        <formula>HYPERLINK(
&apos;file://&apos;&amp;
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SomTv_PfadZumKundenordner__c, &apos; &apos;, &apos;%20&apos;), &apos;\\&apos;, &apos;/&apos;), &apos;//&apos;,&apos;/&apos;)
,
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( SomTv_PfadZumKundenordner__c,  &apos; &apos;, &apos;%20&apos;), &apos;\\&apos;, &apos;/&apos;), &apos;:&apos;,&apos;&apos;)
,
&apos;_blank&apos;

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tftemp</label>
        <type>Text</type>
    </fields>
    <label>AdF Projekt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomTv_MB1Gesamt__c</columns>
        <columns>SomTv_BRGesamt__c</columns>
        <columns>SomTv_MB3Gesamt__c</columns>
        <columns>SomTv_MN3Gesamt__c</columns>
        <columns>SomTv_PhaseProjekt__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>AdF Projekt-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdF Projekte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>